package br.com.archflow.model.enums;

/**
 * Níveis de log disponíveis.
 */
public enum LogLevel {
    DEBUG, INFO, WARN, ERROR
}
